--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 
     <!-- Link Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- Link FontAwsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
     <!-- Link css -->
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
+    
     
     <!-- Link js -->
     <script src="js/script.js"></script>
