--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="inner-container">
             <header class="header">
                 <h1>To Do List</h1>
-                <input v-model="todoNew" class="input" type="text" placeholder="Add...">
+                <input @keyup.enter="add" v-model="todoNew" class="input" type="text" placeholder="Add...">
                 <i @click="add" class="fas fa-plus-circle"></i>
             </header>
         
