--- a/index.html
+++ b/index.html
@@ -19,16 +19,21 @@
         <div class="inner-container">
             <header class="header">
                 <h1>To Do List</h1>
-                <input @keyup.enter="add" v-model="todoNew" class="input" type="text" placeholder="Add...">
-                <i @click="add" class="fas fa-plus-circle"></i>
+                <div class="input-cont">
+                    <input @keyup.enter="add" v-model="todoNew" class="input" type="text" placeholder="Add...">
+                    <i @click="add" class="icon fas fa-plus-circle"></i>
+                </div>
             </header>
         
             <div class="todos">
                 <ul>
                     <li v-for="(todo, index) in todos">
                         <div class="todo-text">
-                            <h2>{{todo.text}}</h2>
-                            <i @click="remove" class="far fa-check-circle"></i>
+                            <h2>{{index + 1}}) <span :class="(todo.done == true) ? 'text-mark' : ''">{{todo.text}}</span></h2>
+                            <div>
+                                <i @click="remove(index)" class="icon fas fa-times-circle"></i>
+                                <i @click="checked(index)" class="icon far fa-check-circle"></i>    
+                            </div>    
                         </div>
                     </li>
                 </ul>
